[Questo è un update provvisorio] Release: - Nuova interfaccia grafica completa. Modernizzate le seguenti interfaccie:  - Inserisci cliente  - Tab modifica ticket  - Tab dettaglio  - Tab filtri dettaglio  - Nav delle voci di menu  - Tab dell'inserisci Commessa/Cliente  - Tab della visualizzazione Commessa/Cliente  - [Tab modifica cliente]  - [Tab modifica commessa] - [Nuovo menu di modifica colori. Ora è possibile gestire il colore di tutti gli elementi del form] Bug Fix: - Risolto log del consuntivaTutto - Risolto problema relativo alla mancata consuntivazione dei ticket senza commessa - [Risolto problema del mancato aggiornamento del consuntivato sui ticket '/'] - [Risolto problema dell raggruppamento del ticket senza commessa]

--- a/Consultivazione/Config/configDefault.ini
+++ b/Consultivazione/Config/configDefault.ini
@@ -1,5 +1,5 @@
 [ApplicationInfo]
-Versione: 2.0.0.0
+Versione=2.0.0.0
 [ItemColor]
 InserisciMenu_BackColor=#006abd
 InserisciMenu_ForeColor=#f0f0f0
