--- a/Consultivazione/Config/config.ini
+++ b/Consultivazione/Config/config.ini
@@ -1,5 +1,5 @@
 [ApplicationInfo]
-Versione=2.0.0.0
+Versione=3.0.0.0
 [ItemColor]
 InserisciMenu_BackColor=#006abd
 InserisciMenu_ForeColor=#f0f0f0
@@ -8,7 +8,7 @@ From_ForeColor=#0a0a0a
 [IconColor]
 IconsColor=white
 [ConfigImp]
-DB_PATH=Z:\Consuntivazione.accdb
+DB_PATH=C:\Users\flavi\Desktop\Consuntivazione Test\Consuntivazione_Portable_Code\Consuntivazione_Portable_Code\Consuntivazione.accdb
 DB_DEFAULT=C:\Users\Flavietto\Documents\Altro\Consuntivazione_Portable_Code\Consultivazione\Database\DB Default\Consuntivazione.accdb
 AggAutGiornoAttuale=False
 AggAutDettaglio=False
