--- a/Consultivazione/Consuntivazione.vbproj
+++ b/Consultivazione/Consuntivazione.vbproj
@@ -114,11 +114,13 @@
     <Reference Include="System">
       <HintPath>..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7.2\System.dll</HintPath>
     </Reference>
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -180,6 +182,12 @@
     <Compile Include="frmModifica.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmReport.Designer.vb">
+      <DependentUpon>frmReport.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmReport.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="frmSfondoNero.Designer.vb">
       <DependentUpon>frmSfondoNero.vb</DependentUpon>
     </Compile>
@@ -212,12 +220,14 @@
   <ItemGroup>
     <EmbeddedResource Include="frmClienti.resx">
       <DependentUpon>frmClienti.vb</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="frmCommesse.resx">
       <DependentUpon>frmCommesse.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmConsuntivazione.resx">
       <DependentUpon>frmConsuntivazione.vb</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="frmImpostazioni.resx">
       <DependentUpon>frmImpostazioni.vb</DependentUpon>
@@ -228,18 +238,25 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmModifica.resx">
       <DependentUpon>frmModifica.vb</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmReport.resx">
+      <DependentUpon>frmReport.vb</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="frmSfondoNero.resx">
       <DependentUpon>frmSfondoNero.vb</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="frmTema.resx">
       <DependentUpon>frmTema.vb</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.vb</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -276,6 +293,7 @@
     <Content Include="Documentazione\Immagini\visDettaglio.png" />
     <Content Include="Immagini\commesse_32x32_bianco.png" />
     <Content Include="Immagini\commesse_32x32_nero.png" />
+    <None Include="Immagini\customers.png" />
     <Content Include="Immagini\documentazione_32x32_bianco.png" />
     <Content Include="Immagini\documentazione_32x32_nero.png" />
     <Content Include="Immagini\icona.ico" />
@@ -287,10 +305,16 @@
     <Content Include="Immagini\menuChiuso_16x16_nero.png" />
     <Content Include="Immagini\menuChiuso_32x32_bianco.png" />
     <Content Include="Immagini\menuChiuso_32x32_nero.png" />
+    <None Include="Immagini\OreExtra.png" />
+    <None Include="Immagini\OreLavorate.png" />
     <Content Include="Immagini\pennello_32x32_bianco.png" />
     <Content Include="Immagini\pennello_32x32_nero.png" />
+    <None Include="Immagini\report_32x32_binaco.png" />
+    <None Include="Immagini\report_32x32_nero.png" />
+    <None Include="Immagini\ticket.png" />
     <Content Include="Immagini\ticket_32x32_bianco.png" />
     <Content Include="Immagini\ticket_32x32_nero.png" />
+    <None Include="Immagini\user.png" />
     <Content Include="Template\Template_Commesse.xlsx" />
     <Content Include="Template\Template_Ticket.xlsx" />
   </ItemGroup>
